--- a/jehc-web/src/main/webapp/deng/source/css/bootcommon.css
+++ b/jehc-web/src/main/webapp/deng/source/css/bootcommon.css
@@ -218,6 +218,6 @@ div.dataTables_wrapper div.dataTables_length select {
 .bv-form .help-block {
     color: #e73d4a;
 }
-.table > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {padding: 5px 10px;}
-table.dataTable tbody > tr.selected, table.dataTable tbody > tr > .selected {background-color: #f2e3b2;}
+.table > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {padding: 8px 10px;}
+table.dataTable tbody > tr.selected, table.dataTable tbody > tr > .selected {background-color: #ffefbb;}
 #datatables{white-space: nowrap;width:100%!important} 
