--- a/jehc-web/src/main/webapp/deng/source/plugins/admin/index/apps/css/admin-group.css
+++ b/jehc-web/src/main/webapp/deng/source/plugins/admin/index/apps/css/admin-group.css
@@ -46,7 +46,7 @@
     background: #ffffff;
 } 
 .page-container-bg-solid .page-content {
-    background: #eef1f5;
+    background: #fff;
 }
 .page-sidebar .page-sidebar-menu.page-sidebar-menu-compact>li>a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu.page-sidebar-menu-compact>li>a {
     min-height: 50px;
@@ -90,7 +90,7 @@
     margin-right: 0px;
 }
 .page-container-bg-solid .page-content {
-    background: #f5f5f5;
+    background: #fff;
 }
 .page-sidebar-fixed:not(.page-footer-fixed) .page-footer {
     background-color: #f5f5f5;
