--- a/jehc-web/src/main/webapp/deng/source/plugins/admin/index/apps/css/admin-white-black.css
+++ b/jehc-web/src/main/webapp/deng/source/plugins/admin/index/apps/css/admin-white-black.css
@@ -88,7 +88,7 @@
     margin-right: 0px;
 }
 .page-container-bg-solid .page-content {
-    background: #f5f5f5;
+    background: #fff;
 }
 .page-sidebar-fixed:not(.page-footer-fixed) .page-footer {
     background-color: #f5f5f5;
