--- a/jehc-web/src/main/webapp/deng/source/css/bootcommon.css
+++ b/jehc-web/src/main/webapp/deng/source/css/bootcommon.css
@@ -221,3 +221,29 @@ div.dataTables_wrapper div.dataTables_length select {
 .table > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {padding: 8px 10px;}
 table.dataTable tbody > tr.selected, table.dataTable tbody > tr > .selected {background-color: #ffefbb;}
 #datatables{white-space: nowrap;width:100%!important} 
+h4 {
+   font-size: 18px;
+   padding-left: 12px;
+   padding-top: 12px;
+   font-weight: 500;
+}
+.select_boot {  
+    border: 0;  
+    display: block;  
+    position: relative;  
+    min-height: 1.146667rem;  
+    line-height: 1.146667rem;  
+    white-space: nowrap;  
+    width: 100%;  
+    overflow: hidden;  
+    padding-right: .6rem;  
+    background-color: #fff;  
+    background: transparent;  
+    appearance:none;  
+    -moz-appearance:none; /* Firefox */  
+    -webkit-appearance:none; /* Safari  Chrome */  
+}  
+.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
+    background-color: #fff;
+    opacity: 1;
+}
